--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
 
+  <!-- Preload hero logo for faster LCP (adjust type if you don't add the WebP) -->
+  <link rel="preload" as="image" href="/assets/img/revigorelife-logo1.webp" imagesrcset="/assets/img/revigorelife-logo1.webp" type="image/webp">
+
   <style>
     :root { --brand:#1C6B63; --ink:#163a36; --bg:#f7f9f8; }
     *{box-sizing:border-box}
@@ -25,12 +28,14 @@
       color:var(--ink); background:var(--bg); line-height:1.6;
     }
 
-    /* Header with big centered logo */
     header.hero {
       background:#fff; padding:36px 20px 18px; border-bottom:1px solid #e7ecea; text-align:center;
     }
+    /* Keep actual logo pixels similar to these to avoid up/downscaling cost */
     .hero .logo {
-      width:clamp(160px,22vw,260px); height:auto; display:inline-block;
+      width:clamp(160px,22vw,260px);
+      height:auto;
+      display:inline-block;
       filter:drop-shadow(0 6px 18px rgba(0,0,0,.08));
     }
 
@@ -38,11 +43,9 @@
     h1 { font-size:clamp(28px,4vw,44px); color:var(--brand); margin:16px 0 8px; }
     .tagline { font-size:clamp(16px,2.2vw,20px); color:#5a6c69; margin-bottom:24px; }
 
-    /* Social row (no links) */
     .social { display:flex; justify-content:center; gap:18px; margin:36px 0 8px; align-items:center; }
     .social img { width:34px; height:34px; object-fit:contain; display:block; }
 
-    /* Footer green bar */
     .site-footer { background:var(--brand); color:#fff; text-align:center; }
     .site-footer .links {
       display:flex; gap:22px; justify-content:center; flex-wrap:wrap;
@@ -56,8 +59,18 @@
 <body>
 
   <header class="hero" role="banner">
-    <!-- Make sure this file exists exactly: /assets/img/revigorelife-logo1.png -->
-    <img src="/assets/img/revigorelife-logo1.png" alt="RevigoreLife" class="logo">
+    <!-- Use WebP with PNG fallback. Set intrinsic width/height to avoid CLS (adjust to your real logo pixels). -->
+    <picture>
+      <source srcset="/assets/img/revigorelife-logo1.webp" type="image/webp">
+      <img
+        src="/assets/img/revigorelife-logo1.png"
+        alt="RevigoreLife"
+        class="logo"
+        width="520" height="520"  <!-- set to your logo’s actual pixel size -->
+        fetchpriority="high"
+        decoding="async"
+        loading="eager">
+    </picture>
   </header>
 
   <main role="main">
@@ -68,10 +81,10 @@
 
     <p>Explore our articles, resources, and recommendations — and check back for new content soon.</p>
 
-    <!-- Local, repo-hosted icons (no links) -->
     <div class="social" role="group" aria-label="Social media icons">
-      <img src="/assets/img/Instagram.png" alt="Instagram logo" loading="lazy">
-      <img src="/assets/img/whatsapp.svg"  alt="WhatsApp logo"  loading="lazy">
+      <!-- Explicit sizes prevent layout shift -->
+      <img src="/assets/img/Instagram.png" alt="Instagram logo" width="34" height="34" decoding="async" loading="lazy">
+      <img src="/assets/img/whatsapp.svg"  alt="WhatsApp logo"  width="34" height="34" decoding="async" loading="lazy">
     </div>
   </main>
 
