--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
     .site-footer .links a:hover { text-decoration:underline; }
     .site-footer .legal { font-size:.92rem; opacity:.95; padding:12px 16px 18px; }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYSHDCW0X5"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ZYSHDCW0X5');
+</script>
 </head>
 <body>
 
