--- a/disclosures.html
+++ b/disclosures.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Disclosures | RevigoreLife</title>
   <meta name="description" content="RevigoreLife disclosures"/>
-
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYSHDCW0X5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZYSHDCW0X5');
+  </script>
+  
   <style>
     :root { --brand:#1C6B63; --ink:#163a36; --bg:#f7f9f8; }
     *{box-sizing:border-box}
@@ -15,7 +24,6 @@
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       color:var(--ink); background:var(--bg); line-height:1.6;
     }
-
     .backwrap { max-width:960px; margin:16px auto 0; padding:0 20px; }
     .backbtn {
       display:inline-block; background:#ffffff; color:var(--brand); border:2px solid var(--brand);
@@ -23,7 +31,6 @@
       transition:background .15s ease, color .15s ease;
     }
     .backbtn:hover { background:var(--brand); color:#fff; }
-
     main { flex:1; max-width:860px; margin:16px auto 48px; padding:0 20px; }
     .card {
       background:#fff; padding:24px; border-radius:14px;
@@ -33,7 +40,6 @@
     h2 { margin-top:32px; color:#333; }
     a { color:var(--brand); text-decoration:none; border-bottom:1px solid var(--brand); }
     .muted { color:#666; font-size:.95rem; }
-
     /* Footer green bar */
     .site-footer { background:var(--brand); color:#fff; text-align:center; }
     .site-footer .links {
@@ -46,30 +52,23 @@
   </style>
 </head>
 <body>
-
   <div class="backwrap">
     <a class="backbtn" href="/" onclick="if(history.length>1){history.back(); return false;}">← Back</a>
   </div>
-
   <main role="main">
     <div class="card">
       <h1>Disclosures</h1>
       <p class="muted">Last updated: <script>document.write(new Date().toLocaleDateString())</script></p>
-
       <h2>Affiliate Disclosure</h2>
       <p>Some links on RevigoreLife are affiliate links. This means we may earn a commission if you click a link and purchase a product — at no additional cost to you. We only recommend products we believe bring real value. Your support helps us keep creating helpful content.</p>
-
       <h2>Medical Disclaimer</h2>
       <p>Content on this site is for informational and educational purposes only. It is not medical advice. Always consult with a qualified healthcare professional before making changes to your diet, supplements, or exercise routine.</p>
-
       <h2>Advertising Disclosure</h2>
       <p>We may display advertising across the site, including retargeting. Ads and affiliate relationships do not influence the objectivity of our content.</p>
-
       <h2>Contact</h2>
       <p>Questions? Email us at <a href="mailto:contact@revigorelife.com">contact@revigorelife.com</a>.</p>
     </div>
   </main>
-
   <footer class="site-footer" role="contentinfo">
     <nav class="links" aria-label="Footer">
       <a href="/privacy.html">Privacy</a>
@@ -80,6 +79,5 @@
       © <script>document.write(new Date().getFullYear())</script> RevigoreLife. All rights reserved.
     </div>
   </footer>
-
 </body>
 </html>
