--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Privacy Policy | RevigoreLife</title>
   <meta name="description" content="RevigoreLife privacy policy"/>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYSHDCW0X5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZYSHDCW0X5');
+</script>
   <style>
     :root { --brand:#1C6B63; --ink:#163a36; --bg:#f7f9f8; }
     *{box-sizing:border-box}
