--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
     main { flex:1; max-width:960px; margin:24px auto 48px; padding:0 20px; }
     h1 { font-size:clamp(28px,4vw,44px); color:var(--brand); margin:16px 0 8px; }
     .tagline { font-size:clamp(16px,2.2vw,20px); color:#5a6c69; margin-bottom:24px; }
+
+    /* Featured product card */
+    .featured { margin:28px 0 8px; }
+    .featured h2 { margin:0 0 12px; color:var(--ink); font-size:1.2rem; text-align:center; }
+    .card.product {
+      background:#fff; border:1px solid #e7ecea; border-radius:16px;
+      box-shadow:0 10px 24px rgba(0,0,0,.05);
+      padding:16px; display:grid; grid-template-columns:120px 1fr; gap:16px; align-items:center;
+      max-width:720px; margin:0 auto;
+    }
+    .card.product img { width:100%; height:100px; object-fit:contain; border-radius:10px; background:#fff; }
+    .card.product h3 { margin:4px 0 6px; color:var(--brand); }
+    .btns { display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+    .btn { display:inline-block; padding:10px 14px; border-radius:12px; text-decoration:none; font-weight:700 }
+    .btn.buy { background:var(--brand); color:#fff; }
+    .btn.more { border:2px solid var(--brand); color:var(--brand); background:#fff; }
+
     .social { display:flex; justify-content:center; gap:18px; margin:36px 0 8px; align-items:center; }
     .social img { width:34px; height:34px; object-fit:contain; display:block; }
     .site-footer { background:var(--brand); color:#fff; text-align:center; }
@@ -46,15 +63,22 @@
     .site-footer .links a { color:#fff; text-decoration:none; font-weight:600; letter-spacing:.2px; }
     .site-footer .links a:hover { text-decoration:underline; }
     .site-footer .legal { font-size:.92rem; opacity:.95; padding:12px 16px 18px; }
+
+    @media (max-width:700px){
+      .card.product { grid-template-columns:1fr; text-align:center; }
+      .card.product img { height:120px; }
+      .btns { justify-content:center; }
+    }
   </style>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYSHDCW0X5"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-ZYSHDCW0X5');
-</script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZYSHDCW0X5');
+  </script>
 </head>
 <body>
 
@@ -75,6 +99,29 @@
     <p>At RevigoreLife, we believe in empowering you with the tools, tips, and resources to live healthier, happier, and more fulfilled. Whether it’s improving your wellness, upgrading your daily habits, or finding the best lifestyle products, we’re here to guide you every step of the way.</p>
 
     <p>Explore our articles, resources, and recommendations — and check back for new content soon.</p>
+
+    <!-- Featured product: Bioma Probiotics (US) -->
+    <section class="featured" aria-labelledby="feat-title">
+      <h2 id="feat-title">Featured product</h2>
+      <article class="card product">
+        <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png"
+             alt="Bioma Probiotics"
+             onerror="this.onerror=null; this.src='/assets/img/revigorelife-logo1.png';">
+        <div class="content">
+          <h3>Bioma Probiotics (US)</h3>
+          <p>Gut health support. Available in the United States.</p>
+          <div class="btns">
+            <a class="btn more" href="/us/products/bioma-probiotics/">See details</a>
+            <a class="btn buy"
+               href="/go/bioma-probiotics/?country=US"
+               rel="sponsored nofollow noopener"
+               onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',country:'US',placement:'home'});">
+               Buy
+            </a>
+          </div>
+        </div>
+      </article>
+    </section>
 
     <div class="social" role="group" aria-label="Social media icons">
       <img src="/assets/img/Instagram.png" alt="Instagram logo" width="34" height="34" decoding="async" loading="lazy">
