--- a/index.html
+++ b/index.html
@@ -5,31 +5,57 @@
   <title>RevigoreLife — Shop by Category</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover curated wellness products by category. Health, Diet, CBD/Hemp, Gadgets and more.">
+
+  <!-- Open Graph -->
   <meta property="og:title" content="RevigoreLife — Shop by Category">
   <meta property="og:description" content="Curated wellness picks with clear availability by country.">
   <meta property="og:image" content="/og-cover.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://revigorelife.com/">
+
   <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYSHDCW0X5"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-ZYSHDCW0X5',{anonymize_ip:true});</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-ZYSHDCW0X5', { anonymize_ip: true });
+  </script>
 
   <style>
     :root{--brand:#1C6B63;--ink:#163a36;--bg:#f7f9f8;--border:#e7ecea}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--ink);line-height:1.6}
 
+    /* === Amazon-style Featured grid === */
+    .featured { margin: 28px 0 8px }
+    .featured h3.section { margin: 18px 0 12px; color: var(--ink); font-size: 1.15rem }
+    .cards { display:grid; grid-template-columns:repeat(auto-fill,minmax(220px,1fr)); gap:14px }
+    .pcard { background:#fff; border:1px solid var(--border); border-radius:14px; box-shadow:0 8px 22px rgba(0,0,0,.06); padding:12px; display:flex; flex-direction:column }
+    .pimg { aspect-ratio:1/1; border:1px solid #eef1ef; border-radius:12px; overflow:hidden; display:grid; place-items:center; background:#fff }
+    .pimg img { width:100%; height:100%; object-fit:contain }
+    .swatches { display:flex; gap:6px; margin:8px 0 6px }
+    .swatch { width:11px; height:11px; border-radius:999px; border:1px solid rgba(0,0,0,.25) }
+    .ptitle { margin:6px 0 4px; font-size:.95rem; line-height:1.35; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
+    .prating { display:flex; align-items:center; gap:6px; margin:2px 0 4px; font-size:.86rem; color:#4b5c59 }
+    .stars { letter-spacing:1px; color:#F59E0B } /* ★ unicode stars */
+    .price { font-weight:800; margin:6px 0 2px; font-size:1.05rem }
+    .price sup { font-size:.7em; vertical-align:top }
+    .meta { color:#5a6c69; font-size:.82rem; margin:0 0 8px }
+    .actions { margin-top:auto; display:flex; gap:8px }
+    .pbtn { flex:1; text-align:center; padding:9px 10px; border-radius:12px; text-decoration:none; font-weight:700 }
+    .pbtn.buy { background:var(--brand); color:#fff }
+    .pbtn.more { border:2px solid var(--brand); color:var(--brand); background:#fff }
+
     /* Promo + header (search) + top nav */
     .top-promo{background:#0f4f47;color:#fff;font-weight:600;text-align:center;padding:8px 12px;font-size:.95rem}
     header.site-head{background:#fff;border-bottom:1px solid var(--border)}
-    /* give the logo more space on desktop */
     header .row{
       max-width:1200px;margin:0 auto;display:grid;
       grid-template-columns:220px 1fr 260px;gap:16px;align-items:center;padding:14px 16px
     }
-    /* bigger, responsive logo */
     .logo{height:clamp(60px, 8vw, 96px); object-fit:contain; filter:drop-shadow(0 4px 10px rgba(0,0,0,.06))}
     .search{display:flex;gap:8px}
     .search input{width:100%;padding:10px 12px;border:1px solid #cdd6d4;border-radius:12px}
@@ -61,15 +87,6 @@
     .cat h4{position:absolute;left:14px;bottom:14px;margin:0;color:#fff;font-size:1.1rem}
     .cat:hover,.tile:hover{box-shadow:0 10px 24px rgba(0,0,0,.08)}
 
-    /* Featured product card (Bioma) */
-    .featured{margin:28px 0 8px}
-    .card{background:#fff;border:1px solid var(--border);border-radius:16px;box-shadow:0 10px 24px rgba(0,0,0,.05);padding:16px;display:grid;grid-template-columns:120px 1fr;gap:16px;align-items:center;max-width:720px;margin:0 auto}
-    .card img{width:100%;height:110px;object-fit:contain;border-radius:10px;background:#fff}
-    .btns{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    .btn{display:inline-block;padding:10px 14px;border-radius:12px;text-decoration:none;font-weight:700}
-    .btn.buy{background:var(--brand);color:#fff}
-    .btn.more{border:2px solid var(--brand);color:var(--brand);background:#fff}
-
     /* Footer */
     footer.site-footer{background:var(--brand);color:#fff;text-align:center}
     footer.site-footer nav{display:flex;gap:22px;justify-content:center;padding:14px;border-bottom:1px solid rgba(255,255,255,.2)}
@@ -82,8 +99,6 @@
       .tile--left{grid-column:span 12}
       .tile--center,.tile--right{grid-column:span 6}
       .tile{height:220px}
-      .card{grid-template-columns:1fr;text-align:center}
-      .card img{height:130px}
     }
     @media (max-width:640px){
       .tile--center,.tile--right{grid-column:span 12}
@@ -105,7 +120,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <!-- quicklinks: Privacy removed as requested -->
+    <!-- quicklinks: Privacy removed -->
     <div class="quicklinks">
       <a href="/categories/">Categories</a>
       <a href="/products/">All Products</a>
@@ -162,22 +177,10 @@
     </a>
   </section>
 
-  <!-- Featured product: Bioma (US) -->
+  <!-- Featured: Amazon-style grid -->
   <section class="featured" aria-labelledby="feat-title">
     <h3 id="feat-title" class="section">Featured</h3>
-    <article class="card">
-      <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png" alt="Bioma Probiotics"
-           onerror="this.onerror=null; this.src='/assets/img/revigorelife-logo1.png';">
-      <div>
-        <h3 style="margin:4px 0 6px;color:var(--brand)">Bioma Probiotics (US)</h3>
-        <p>Gut health support. Available in the United States.</p>
-        <div class="btns">
-          <a class="btn more" href="/us/products/bioma-probiotics/">See details</a>
-          <a class="btn buy" href="/go/bioma-probiotics/?country=US" rel="sponsored nofollow noopener"
-             onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',country:'US',placement:'home'});">Buy</a>
-        </div>
-      </div>
-    </article>
+    <div id="featured-cards" class="cards" aria-live="polite"></div>
   </section>
 
 </main>
@@ -190,5 +193,74 @@
   </nav>
   <div class="legal">© <script>document.write(new Date().getFullYear())</script> RevigoreLife</div>
 </footer>
+
+<!-- Featured grid script -->
+<script>
+  (async function renderFeatured(){
+    let items = [];
+    try {
+      const r = await fetch('/assets/data/featured.json', {cache:'no-store'});
+      if (r.ok) items = await r.json();
+    } catch(e) {}
+    if (!items.length) {
+      items = [{
+        slug:'bioma-probiotics',
+        title:'Bioma Probiotics — Gut Health Support (US)',
+        image:'/assets/img/products/bioma-probiotics/Main_Bioma.png',
+        price:{d:47, c:'99', currency:'$'},
+        rating:4.6,
+        reviews:'2k+',
+        swatches:['#2ecc71','#3498db','#f39c12'],
+        countryNote:'Available: US',
+        productUrl:'/us/products/bioma-probiotics/',
+        goUrl:'/go/bioma-probiotics/?country=US'
+      }];
+    }
+    document.getElementById('featured-cards').innerHTML = items.map(cardHTML).join('');
+  })();
+
+  function cardHTML(p){
+    const dollars = (p.price?.d ?? 0);
+    const cents   = (p.price?.c ?? '00');
+    const cur     = (p.price?.currency ?? '$');
+    const sw      = (p.swatches||[]).slice(0,6).map(s=>`<span class="swatch" style="background:${s}"></span>`).join('');
+    const stars   = toStars(p.rating||0);
+    const buyHref = p.goUrl || '#';
+
+    return `
+      <article class="pcard">
+        <a class="pimg" href="${p.productUrl||'#'}" aria-label="${escapeHtml(p.title)}">
+          <img src="${p.image||'/assets/img/revigorelife-logo1.png'}"
+               alt="${escapeHtml(p.title)}"
+               onerror="this.onerror=null; this.src='/assets/img/revigorelife-logo1.png';">
+        </a>
+
+        <div class="swatches" aria-label="Options">${sw}</div>
+        <a class="ptitle" href="${p.productUrl||'#'}">${escapeHtml(p.title)}</a>
+
+        <div class="prating">
+          <span class="stars" aria-label="${(p.rating||0).toFixed(1)} out of 5">${stars}</span>
+          <span>${(p.rating||0).toFixed(1)} • ${p.reviews||'0'}</span>
+        </div>
+
+        <div class="price">${cur}${dollars}<sup>${cents}</sup></div>
+        <div class="meta">${escapeHtml(p.countryNote||'')}</div>
+
+        <div class="actions">
+          <a class="pbtn more" href="${p.productUrl||'#'}">Details</a>
+          <a class="pbtn buy" href="${buyHref}" rel="sponsored nofollow noopener"
+             onclick="gtag('event','affiliate_click',{offer:'${p.slug||''}',placement:'home-featured'});">Buy</a>
+        </div>
+      </article>`;
+  }
+
+  function toStars(r){
+    const full = Math.floor(r), half = (r-full)>=0.5?1:0, empty = 5-full-half;
+    return '★'.repeat(full) + (half?'☆':'') + '☆'.repeat(empty);
+  }
+  function escapeHtml(s){
+    return (s||'').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+  }
+</script>
 </body>
 </html>
