--- a/go/bioma-probiotics/index.html
+++ b/go/bioma-probiotics/index.html
@@ -1,12 +1,12 @@
-<!doctype html><meta charset="utf-8">
-<script>
-  const country = new URL(location.href).searchParams.get('country') || 'US';
-  const base = "https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/"; // your affiliate link
-  const sep = base.includes('?') ? '&' : '?';
-  const url = base + sep +
-    'utm_source=revigorelife&utm_medium=affiliate&utm_campaign=bioma-probiotics&utm_country=' + encodeURIComponent(country);
-
-  if (window.gtag) { try { gtag('event','affiliate_redirect',{offer:'bioma-probiotics',country}); } catch(e){} }
-  location.replace(url);
-</script>
-<p>If you are not redirected, <a rel="sponsored nofollow" href="https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/">click here</a>.</p>
+<!doctype html>
+<meta charset="utf-8">
+<title>Redirecting…</title>
+<link rel="canonical" href="https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/">
+<meta http-equiv="refresh" content="0; url=https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/">
+<body>
+  <p>Redirecting to the offer… If you are not redirected, 
+     <a href="https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/">click here</a>.</p>
+  <script>
+    window.location.replace("https://www.tracxpert.com/2GHLWSM2/W7KP6BZ/");
+  </script>
+</body>
